--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ repositories {
     flatDir {
         dirs 'prebuilt-libs'
     }
+    mavenCentral()
 }
 
 android {
@@ -34,4 +35,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:23.0.1'
+    compile 'com.google.api-client:google-api-client:1.19.1'
+    compile 'com.google.apis:google-api-services-mirror:v1-rev81-1.20.0'
 }
